--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "npm run db:init && next dev",
-    "build": "npm run db:init && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:init": "tsx scripts/init-db.ts",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:seed": "tsx prisma/seed.tsx",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@neondatabase/serverless": "1.0.2",
+    "@neondatabase/serverless": "^1.0.2",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
